Fixed css styling to remove accidental whitespace: pre; for * elements

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,7 +3,6 @@
 * {
     font-family: "Fira Code", monospace;
     transition: all ease 0.2s;
-    white-space: pre;
 }
 
 body {
